--- a/index.html
+++ b/index.html
@@ -26,38 +26,72 @@
 <body>
     <Article class="container">
         <div class="bg-img">
-            <nav class="menu">
-                <img src="../Sunnyside-agency-landing-page/images/logo.svg" alt="">
-                <ul>
-                    <li>About</li>
-                    <li>Services</li>
-                    <li>Projects</li>
-                    <li>Contact</li>
-                </ul>
-            </nav>
+            <div class="menu">
+                <nav class="top">
+                    <img src="../Sunnyside-agency-landing-page/images/logo.svg" alt="">
+                    <ul>
+                        <li>About</li>
+                        <li>Services</li>
+                        <li>Projects</li>
+                        <li>Contact</li>
+                    </ul>
+                </nav>
+
+            </div>
             <H1>We are creatives</H1>
+            <svg width="36" height="114" xmlns="http://www.w3.org/2000/svg"><g stroke="#FFF" stroke-width="6" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round"><path d="M18 3v100M3 95.484l15 15 15-15"/></g></svg>
         </div>
         <article>
             <div class="row">
-                <div class="column">Transform your brand We are a full-service creative agency specializing in helping brands grow fast. Engage your clients through compelling visuals that do most of the marketing for you. Learn more</div>
+                <div class="column">
+                    <div>
+                        <h2>Transform your brand</h2>
+                        <p> We are a full-service creative agency specializing in helping brands grow fast. Engage your clients through compelling visuals that do most of the marketing for you.</p>
+                        <h4>Learn more</h4>
+                    </div>
+                </div>
                 <div class="column"><img src="images/desktop/image-transform.jpg" alt=""></div>
             </div>
             <div class="row">
                 <div class="column"><img src="images/desktop/image-stand-out.jpg" alt=""></div>
-                <div class="column">Stand out to the right audience Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. Learn more</div>
+                <div class="column">
+                    <div>
+                        <h2>Stand out to the right audience</h2>
+                        <p> Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.</p>
+                        <h4>Learn more</h4>
+                    </div>
+                </div>
             </div>
             <div class="row">
-                <div class="column">Graphic design Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</div>
-                <div class="column"><img src="images/desktop/image-graphic-design.jpg" alt=""></div>
+                <div class="column"><img src="images/desktop/image-graphic-design.jpg" alt="">Graphic design Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</div>
+                <div class="column"><img src="images/desktop/image-photography.jpg" alt="">Photography Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</div>
             </div>
-            <div class="row">
-                <div class="column"><img src="images/desktop/image-photography.jpg" alt=""></div>
-                <div class="column">Photography Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</div>
+        </article>
+        <article>
+            <h2>Client testimonials</h2>
+            <div class="presentation">
+                <div class="profil">
+                    <img src="images/image-emily.jpg" alt="">
+                    <h4>We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</h4>
+                    <h3>Emily R.</h3>
+                    <p>Marketing Director</p>
+                </div>
+                <div class="profil">
+                    <img src="images/image-thomas.jpg" alt="">
+                    <h4> Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</h4>
+                    <h3>Thomas S.</h3>
+                    <p>Chief Operating Officer</p>
+                </div>
+                <div class="profil">
+                    <img src="images/image-jennie.jpg" alt="">
+                    <h4>Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</h4>
+                    <h3>Jennie F.</h3>
+                    <p>Business Owner</p>
+                </div>
             </div>
         </article>
         <p>
-            Client testimonials We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit. Emily R. Marketing Director Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying
-            and enjoyable experience. Thomas S. Chief Operating Officer Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended! Jennie F. Business Owner About Services Projects Contact
+            About Services Projects Contact
         </p>
         <div class="attribution">
             Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your Name Here</a>.
